# city_weather

./: README.md  pyproject.toml  requirements.txt
city_weather/common/: pydantic_models.py
city_weather/telegram_bot/: config.py  main.py  weather_report.py
city_weather/web_server/weather/: middleware.py  models.py  urls.py  views.py
city_weather/web_server/weather/fixtures/: cities.json
city_weather/web_server/weather/migrations/: 0001_initial.py
city_weather/web_server/weather/utils/: yandex_api.py
city_weather/web_server/web_server/: asgi.py  settings.py  urls.py  wsgi.py
